--- a/app/[lang]/company/[keyword]/components/SearchPanel/index.module.scss
+++ b/app/[lang]/company/[keyword]/components/SearchPanel/index.module.scss
@@ -91,6 +91,7 @@
 .content_layout {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   flex-wrap: wrap;
   width: 1136px;
   margin: 0 auto;
